--- a/style.css
+++ b/style.css
@@ -36,8 +36,9 @@ body {
     color: var(--verde);
 }
 
+
 .botao {
-    font-family: "Crakra Petch", sans-serif;
+    font-family: 'Chakra Petch', sans-serif;
     background-color: var(--botao-inativo);
     color: var(--branco);
     display: flex;
@@ -60,7 +61,7 @@ body {
     display: block;
 }
 
-.botao.ativo {
+.botao.ativo{
     background-color: var(--botao-ativo);
     border-bottom: 4px solid var(--verde);
 }
@@ -88,9 +89,32 @@ body {
     text-transform: uppercase;
 }
 
-.contador { 
+.contador{
+    display:flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+
+.contador-digito{
+    padding: 0 16px;
     text-align: center;
-    font-size: 28px;
+    min-width: 100px;
+}
+
+
+
+.contador-digito-numero{
+    font-size: 80px;
+    margin: 0;
+
+}
+
+.contador-digito-texto{
+    color: var(--verde);
+    font-size: 20px;
+    margin: 0;
+
 }
 
 @media screen and (min-width: 768px) {
